--- a/exemplos/ex2/realoc.X/nbproject/Makefile-genesis.properties
+++ b/exemplos/ex2/realoc.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,9 @@
 #
-#Wed Jun 26 16:14:46 BRT 2013
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\mpasmx
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=8fe1589514540343a5279c082104bce0
-default.languagetoolchain.version=5.50
+#Tue Mar 29 10:46:53 BRT 2016
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v3.26\\mpasmx
+configurations-xml=76eb70e4b230401bda4a78f1f43ab482
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4b47e815d50912689a67d0b162f47a58
+default.languagetoolchain.version=5.66
 host.platform=windows
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=9cb942721b9c9d06799e2f64c19cee3b
+default.com-microchip-mplab-nbide-toolchainMPASMWIN-MPASMWINLanguageToolchain.md5=c898661dcfb2813062f684eda534ca20
